# study-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ball.cpp  box.cpp  configure.sh  earth.cpp  light_point.cpp  model.cpp  point_light.cpp  run.sh  scene.cpp  spot_light.cpp
asset/shader/: phone_shader.glsl  white_shader.glsl
cmake/: assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  spdlog.cmake  stb.cmake
cmake/toolchains/: linux-gcc.cmake  mac-clang.cmake
doc/: ProjStructure.md
include/: Shader.h  callback.h  err_check.h  pch.h  x_log.h
include/application/: Application.h  Camera.h  GameCameraController.h  OrthographicCamera.h  PerspectiveCamera.h  TrackballCameraController.h  assimpLoader.h  assimp_instance_loader.h
include/application/camera/: Camera.h  CameraController.h  GameCameraController.h  OrthographicCamera.h  PerspectiveCamera.h  TrackballCameraController.h
include/application/camera/controller/: CameraController.h  GameCameraController.h
include/glframework/: Core.h  Geometry.h  Mesh.h  Object.h  Scene.h  Shader.h  Texture.h  x_config.h
include/glframework/framebuffer/: frame_buffer.h
include/glframework/geo/: Box.h  Geometry.h  Model.h  Plane.h  ScreenPlane.h  Sphere.h
include/glframework/light/: AmbientLight.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
include/glframework/material/: DepthMaterial.h  Material.h  PhoneMaterial.h  PhongMaterial.h  PointLightMaterial.h  SpotLightMaterial.h  WhiteMaterial.h  cube_map_material.h  cube_material.h  cube_spherical_material.h  grass_instance_material.h  opacity_mask_material.h  phong_env_material.h  phong_instance_by_attribute_material.h  phong_instance_material.h  screen_material.h
include/glframework/mesh/: Mesh.h  instance_mesh.h
include/glframework/renderer/: Renderer.h  light_pack.h
include/glframework/tool/: tool.h
include/input/: Input.h  input.h  input_dispatcher.h
lib/: assimp.cmake  glad.cmake  glfw.cmake  stb.cmake
resources/shader/: 3.3.fragment.glsl  3.3.shader.fsh  3.3.shader.vsh  3.3.vertex.glsl  box.glsl  my_shader.glsl  phone_shader.glsl  point_light_shader.glsl  sphere.glsl  spot_light_shader.glsl  white_shader.glsl
src/: CMakeLists.txt  Shader.cpp  callback.cpp  main.cpp  x_log.cpp
src/GLAD/: glad.c
src/application/: Application.cpp  Camera.cpp  CameraController.cpp  GameCameraController.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Shader.cpp  TrackballCameraController.cpp  assimpLoader.cpp  assimp_instance_loader.cpp
src/application/camera/: Camera.cpp  CameraController.cpp  GameCameraController.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  TrackballCameraController.cpp
src/application/camera/controller/: CameraController.cpp  GameCameraController.cpp  TrackballCameraController.cpp
src/asset/shader/: cube.glsl  cube_spherical.glsl  depth_shader.glsl  grass_instance.glsl  instance_by_attribute.glsl  instance_by_uniform.glsl  phone_shader.glsl  phong_env_shader.glsl  phong_opacity_mask.glsl  phong_shader.glsl  screen.glsl
src/glframework/: Geometry.cpp  Mesh.cpp  Object.cpp  Scene.cpp  Shader.cpp  Texture.cpp
src/glframework/framebuffer/: frame_buffer.cpp
src/glframework/geo/: Box.cpp  Geometry.cpp  Model.cpp  Plane.cpp  ScreenPlane.cpp  Sphere.cpp
src/glframework/light/: AmbientLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp  point_light.cpp
src/glframework/material/: DepthMaterial.cpp  Material.cpp  PhoneMaterial.cpp  PhongMaterial.cpp  PointLightMaterial.cpp  WhiteMaterial.cpp  cube_map_material.cpp  cube_material.cpp  cube_spherical_material.cpp  grass_instance_material.cpp  opacity_mask_material.cpp  phong_env_material.cpp  phong_instance_by_attribute_material.cpp  phong_instance_by_uniform_material.cpp  phong_instance_material.cpp  screen_material.cpp
src/glframework/mesh/: Mesh.cpp  instance_mesh.cpp
src/glframework/renderer/: Renderer.cpp
src/glframework/tool/: tool.cpp
src/input/: Input.cpp  input.cpp  input_dispatcher.cpp
tests/: .gitignore  CMakeLists.txt  backpack_model_test.cpp  box_test.cpp  cube_env_test.cpp  cube_test.cpp  cull_face_test.cpp  depth_test.cpp  earth.cpp  earth_test.cpp  frame_buffer_test.cpp  grass_test.cpp  mesh_instance_by_attribute_test.cpp  mesh_instance_by_uniform_test.cpp  mesh_instance_test.cpp  model.cpp  model_test.cpp  opacity_mask_test.cpp  opacity_test.cpp  point_light.cpp  point_light_test.cpp  scene.cpp  scene_test.cpp  screen_plane_test.cpp  solar_system_test.cpp  solay_system_test.cpp  spherical_test.cpp  spot_light_test.cpp  stencil_test.cpp  z_fighting_test.cpp
